# agent-context-router

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  findings.md  progress.md  task_plan.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260627_0001_initial_schema.py  20260627_0002_remove_embedding_column.py  20260627_0003_remove_document_chunks.py  20260627_0004_add_trace_routing_metadata.py  20260627_0005_add_project_hierarchy.py  20260629_0006_add_document_links.py  20260703_0007_add_usage_cards.py  20260719_0008_add_document_mappings.py
backend/migrations/: env.py
backend/migrations/versions/: 20260720_0001_create_mcp_tasks.py  20260720_0002_create_mcp_document_reads.py  20260721_0003_create_document_projects.py  20260722_0004_create_data_source_management.py  20260722_0005_add_project_type.py  20260722_0006_rename_default_project_type.py  20260722_0007_add_data_source_category.py  20260722_0008_add_database_mcp_persistence.py  20260724_0009_add_mcp_tool_traces.py
backend/src/context_router/: __init__.py  cli.py  config.py  main.py  mcp_server.py
backend/src/context_router/api/: context.py  data_sources.py  document_mappings.py  documents.py  mcp_integration.py  mcp_traces.py  projects.py  tasks.py  traces.py  usage.py
backend/src/context_router/database/: __init__.py  errors.py  manager.py  models.py  policy.py  protocol.py  registry.py  result.py
backend/src/context_router/db/: models.py  session.py
backend/src/context_router/repositories/: __init__.py  data_source_repository.py  database_call_repository.py  document_read_repository.py  task_repository.py  (+2 more)
backend/tests/: test_chunking.py  test_cli.py  test_clickhouse_connector.py  test_clickhouse_integration.py  test_config.py  test_connector_manager.py  test_context_document_read.py  test_context_preparation.py  test_data_source_management_api.py  test_data_source_repository.py  test_database_call_repository.py  test_database_discovery.py  test_database_policy.py  test_database_registry.py  test_database_result.py  test_database_services.py  test_document_graph.py  test_document_ingestion.py  test_document_mapping.py  test_document_metadata.py  test_document_read.py  test_document_tree.py  test_e2e_flow.py  test_embeddings.py  test_health.py  test_mapped_document_read.py  test_mapped_document_sync.py  test_markdown_section.py  test_mcp_integration_api.py  test_mcp_read_policy.py  test_mcp_server.py  test_mcp_traces.py  test_models.py  test_postgres_persistence_integration.py  test_prepare_context.py  test_prepare_preview_api.py  test_project_persistence_api.py  test_project_registry.py  test_project_resolution.py  test_projects.py  (+7 more)
(+180 files in other folders)
