[project]
name = "agent-context-router"
version = "0.1.0"
description = "Project-scoped document and read-only database context router for local AI agents."
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0,<2.0.0",
  "clickhouse-connect>=1.0.0,<2.0.0",
  "fastapi>=0.115.0",
  "mcp>=1.28.1,<2.0.0",
  "PyMySQL>=1.1.1,<2.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pydantic-settings>=2.6.0",
  "PyYAML>=6.0.2,<7.0.0",
  "sqlglot>=26.0.0,<30.0.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/context_router"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "clickhouse: requires the Docker Compose ClickHouse integration service",
  "postgresql: requires CONTEXT_ROUTER_DATABASE_URL and PostgreSQL CREATE DATABASE permission",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
